[gd_scene load_steps=7 format=3 uid="uid://cabevbdy85a88"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_5gbao"]
[ext_resource type="PackedScene" uid="uid://deevrb2lxo3io" path="res://ui/main_menu/main_menu.tscn" id="1_mk2f8"]
[ext_resource type="PackedScene" uid="uid://c5lnguj236lcn" path="res://ui/pause_menu/pause_menu.tscn" id="2_7q6vq"]

[sub_resource type="Animation" id="Animation_q35rx"]
resource_name = "screen_transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6ywt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0din7"]
_data = {
"RESET": SubResource("Animation_6ywt6"),
"screen_transition": SubResource("Animation_q35rx")
}

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5gbao")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="Control" instance=ExtResource("1_mk2f8")]
unique_name_in_owner = true
layout_mode = 1
mouse_filter = 1

[node name="PauseMenu" parent="Control" instance=ExtResource("2_7q6vq")]
unique_name_in_owner = true
layout_mode = 1

[node name="Transition" type="ColorRect" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_0din7")
}

[connection signal="load_game" from="Control/MainMenu" to="." method="_on_main_menu_load_game"]
[connection signal="new_game" from="Control/MainMenu" to="." method="_on_main_menu_new_game"]
[connection signal="quit_to_menu" from="Control/PauseMenu" to="." method="_on_pause_menu_quit_to_menu"]
[connection signal="return_to_game" from="Control/PauseMenu" to="." method="_on_pause_menu_return_to_game"]
[connection signal="save_game" from="Control/PauseMenu" to="." method="_on_pause_menu_save_game"]
